sorted/tests/04-variants-with-data.stderr
error: Dyn should sort before Var
  --> $DIR/04-variants-with-data.rs:20:5
   |
20 |     Dyn(Box<dyn StdError>),
   |     ^^^
